--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,18 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+===Final Group Project
+====Tech Talent South
+====Raleigh Campus
+=====Winter 2016 Full Time Cohort
 
-Things you may want to cover:
+This accountability app is built with Ruby on Rails as part of a final group project.
 
-* Ruby version
+Contributors to this project are:
 
-* System dependencies
+* https://github.com/martykobes
 
-* Configuration
+* https://github.com/mnhasapis
 
-* Database creation
+* https://github.com/beumana
 
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+* https://github.com/rgc3
